--- a/css/style.css
+++ b/css/style.css
@@ -196,11 +196,11 @@ body{font-family:'Noto Sans KR',sans-serif;}
 
 #main_footer > .innerbox{width:1300px; margin:0px auto;}
 #main_footer > .innerbox > ul{ overflow: hidden; margin-bottom:20px;}
-#main_footer > .innerbox > ul > li{float:left; margin-left:10px;}
+#main_footer > .innerbox > ul > li{float:left; margin-left:7px;}
 #main_footer > .innerbox > ul > li:first-child{margin-left:0px;}
-#main_footer > .innerbox > ul > li > a{font-size: 13px; color:#777; }
-#main_footer > .innerbox > ul > li:nth-child(1)::after{content:"｜"; color:#ddd; font-size:13px; vertical-align:text-top; padding-left:10px;}
-#main_footer > .innerbox > ul > li:nth-child(2)::after{content:"｜"; color:#ddd; font-size:13px; vertical-align:text-top; padding-left:10px;}
+#main_footer > .innerbox > ul > li > a{font-size:13px; color:#777; }
+#main_footer > .innerbox > ul > li:nth-child(1)::after{content:"｜"; color:#ddd; font-size:13px; vertical-align:text-bottom; padding-left:7px;}
+#main_footer > .innerbox > ul > li:nth-child(2)::after{content:"｜"; color:#ddd; font-size:13px; vertical-align:text-bottom; padding-left:7px;}
 
 #main_footer > .innerbox > .top{position:fixed; right:30px; bottom:50px; z-index:300; width:40px; height:40px;}
 #main_footer > .innerbox > .top>button{outline:none; border:none; background:none; width:40px; height:40px; text-indent:-9999px; background-image:url(../img/btn_top.png);}
